# popcorn-experiments

./: .gitignore  README.md  pyproject.toml
experiments/exp001/: bags.yaml  exp001.ipynb  trials.yaml
